弄了部分数据库

--- a/code/html/ssw.html
+++ b/code/html/ssw.html
@@ -19,7 +19,7 @@
     </div>
     <div class="div1">
         <div class="div-1">
-            <span class="span1">欢迎光临莎莎网！ <span class="span1-1">登录</span> 或 <span class="span1-1">注册</span> </span>
+            <span class="span1">欢迎光临莎莎网！ <a href=""><span class="span1-1">登录</span></a> 或 <a href=""><span class="span1-1">注册</span></a> </span>
             <div class="right">
                 <dl class="dl1">
                     <dt>我的账户</dt>
@@ -78,11 +78,11 @@
     <div class="div3">
         <div class="div3-1">
             <ul class="list1">
-                <li><a href="">香港特快直送</a><span class="span-1">/</span></li>
-                <li><a href="">闪电保税仓</a><span class="span-1">/</span></li>
-                <li><a href="">限时特卖</a><span class="span-1">/</span></li>
-                <li><a href="">贵宾专享</a><span class="span-1">/</span></li>
-                <li><a href="">莎莎Outlet</a></li>
+                <li><a href="../SQL/client/list.html">香港特快直送</a><span class="span-1">/</span></li>
+                <li><a href="../SQL/client/list.html">闪电保税仓</a><span class="span-1">/</span></li>
+                <li><a href="../SQL/client/list.html">限时特卖</a><span class="span-1">/</span></li>
+                <li><a href="../SQL/client/list.html">贵宾专享</a><span class="span-1">/</span></li>
+                <li><a href="../SQL/client/list.html">莎莎Outlet</a></li>
             </ul>
         </div>
     </div>
@@ -93,37 +93,37 @@
                 <div class="div4-1"><span class="span4"></span>面部护肤</div>
                 <div class="div4-2">
                     <dl class="dl2">
-                        <dt><a href="">洁面/磨砂</a> </dt>
-                        <dd><a href="">泡沫洁面乳</a> </dd>
-                        <dd><a href="">洁面摩丝</a> </dd>
-                        <dd><a href="">洁面啫喱</a> </dd>
-                        <dd><a href="">洁面奶</a> </dd>
-                        <dd><a href="">洁面皂</a> </dd>
-                        <dd><a href="">洁面粉</a> </dd>
-                        <dd><a href="">磨砂膏</a> </dd>
-                        <dd><a href="">磨砂啫喱</a> </dd>
+                        <dt><a href="../SQL/client/list.html">洁面/磨砂</a> </dt>
+                        <dd><a href="../SQL/client/list.html">泡沫洁面乳</a> </dd>
+                        <dd><a href="../SQL/client/list.html">洁面摩丝</a> </dd>
+                        <dd><a href="../SQL/client/list.html">洁面啫喱</a> </dd>
+                        <dd><a href="../SQL/client/list.html">洁面奶</a> </dd>
+                        <dd><a href="../SQL/client/list.html">洁面皂</a> </dd>
+                        <dd><a href="../SQL/client/list.html">洁面粉</a> </dd>
+                        <dd><a href="../SQL/client/list.html">磨砂膏</a> </dd>
+                        <dd><a href="../SQL/client/list.html">磨砂啫喱</a> </dd>
                     </dl>
                     <dl class="dl2">
-                        <dt><a href="">眼部/唇部/颈部护理</a> </dt>
-                        <dd><a href="">眼霜</a> </dd>
-                        <dd><a href="">眼部精化/疗程</a> </dd>
-                        <dd><a href="">眼膜</a> </dd>
-                        <dd><a href="">睡眠免洗式眼膜</a> </dd>
-                        <dd><a href="">润唇膏</a> </dd>
-                        <dd><a href="">唇部精化</a> </dd>
-                        <dd><a href="">唇膜</a> </dd>
-                        <dd><a href="">唇部磨砂</a> </dd>
-                        <dd><a href="">颈霜</a> </dd>
-                        <dd><a href="">颈精华</a> </dd>
-                        <dd><a href="">颈膜颈膜</a> </dd>
+                        <dt><a href="../SQL/client/list.html">眼部/唇部/颈部护理</a> </dt>
+                        <dd><a href="../SQL/client/list.html">眼霜</a> </dd>
+                        <dd><a href="../SQL/client/list.html">眼部精化/疗程</a> </dd>
+                        <dd><a href="../SQL/client/list.html">眼膜</a> </dd>
+                        <dd><a href="../SQL/client/list.html">睡眠免洗式眼膜</a> </dd>
+                        <dd><a href="../SQL/client/list.html">润唇膏</a> </dd>
+                        <dd><a href="../SQL/client/list.html">唇部精化</a> </dd>
+                        <dd><a href="../SQL/client/list.html">唇膜</a> </dd>
+                        <dd><a href="../SQL/client/list.html">唇部磨砂</a> </dd>
+                        <dd><a href="../SQL/client/list.html">颈霜</a> </dd>
+                        <dd><a href="../SQL/client/list.html">颈精华</a> </dd>
+                        <dd><a href="../SQL/client/list.html">颈膜颈膜</a> </dd>
                     </dl>
                     <dl class="dl2">
-                        <dt><a href="">面膜</a> </dt>
-                        <dd><a href="">面膜贴</a> </dd>
-                        <dd><a href="">水洗式面膜</a> </dd>
-                        <dd><a href="">睡眠面膜</a> </dd>
-                        <dd><a href="">面膜粉</a> </dd>
-                        <dd><a href="">面膜泥</a> </dd>
+                        <dt><a href="../SQL/client/list.html">面膜</a> </dt>
+                        <dd><a href="../SQL/client/list.html">面膜贴</a> </dd>
+                        <dd><a href="../SQL/client/list.html">水洗式面膜</a> </dd>
+                        <dd><a href="../SQL/client/list.html">睡眠面膜</a> </dd>
+                        <dd><a href="../SQL/client/list.html">面膜粉</a> </dd>
+                        <dd><a href="../SQL/client/list.html">面膜泥</a> </dd>
                     </dl>
                 </div>
             </li>
@@ -237,59 +237,59 @@
                    <ul class="list5">
                        <li class="li2">护肤排行榜</li>
                        <li>
-                           <img src="../images/13.jpg" alt="">
+                          <a href="../SQL/client/list.html"> <img src="../images/13.jpg" alt="">
                             <p><span class="yew">香港特快直送 零扣关 包税</span>泰国妆蕾  泰国妆蕾蚕丝面膜(金) 10片/盒</p>
-                            <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p>
+                            <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p></a>
 
                       </li>
                        <li>
-                            <img src="../images/13.jpg" alt="">
+                           <a href="../SQL/client/list.html"> <img src="../images/13.jpg" alt="">
                             <p><span class="yew">香港特快直送 零扣关 包税</span>泰国妆蕾  泰国妆蕾蚕丝面膜(金) 10片/盒</p>
-                            <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p>
+                            <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p></a>
                        </li>
                        <li>
-                            <img src="../images/13.jpg" alt="">
+                           <a href="../SQL/client/list.html"> <img src="../images/13.jpg" alt="">
                             <p><span class="yew">香港特快直送 零扣关 包税</span>泰国妆蕾  泰国妆蕾蚕丝面膜(金) 10片/盒</p>
-                            <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p>
+                            <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p></a>
                        </li>
                        <li>
-                            <img src="../images/13.jpg" alt="">
+                           <a href="../SQL/client/list.html"> <img src="../images/13.jpg" alt="">
                             <p><span class="yew">香港特快直送 零扣关 包税</span>泰国妆蕾  泰国妆蕾蚕丝面膜(金) 10片/盒</p>
-                            <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p>
+                            <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p></a>
                        </li>
                        <li>
-                            <img src="../images/13.jpg" alt="">
+                           <a href="../SQL/client/list.html"> <img src="../images/13.jpg" alt="">
                             <p><span class="yew">香港特快直送 零扣关 包税</span>泰国妆蕾  泰国妆蕾蚕丝面膜(金) 10片/盒</p>
-                            <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p>
+                            <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p></a>
                        </li>
                    </ul>
                    <ul class="list5">
                         <li class="li2">彩妆排行榜</li>
                         <li>
-                            <img src="../images/13.jpg" alt="">
+                          <a href="../SQL/client/list.html">  <img src="../images/13.jpg" alt="">
                              <p><span class="yew">香港特快直送 零扣关 包税</span>泰国妆蕾  泰国妆蕾蚕丝面膜(金) 10片/盒</p>
-                             <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p>
+                             <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p></a>
  
                        </li>
                         <li>
-                             <img src="../images/13.jpg" alt="">
+                           <a href="../SQL/client/list.html">  <img src="../images/13.jpg" alt="">
                              <p><span class="yew">香港特快直送 零扣关 包税</span>泰国妆蕾  泰国妆蕾蚕丝面膜(金) 10片/盒</p>
-                             <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p>
+                             <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p></a>
                         </li>
                         <li>
-                             <img src="../images/13.jpg" alt="">
+                           <a href="../SQL/client/list.html">  <img src="../images/13.jpg" alt="">
                              <p><span class="yew">香港特快直送 零扣关 包税</span>泰国妆蕾  泰国妆蕾蚕丝面膜(金) 10片/盒</p>
-                             <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p>
+                             <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p></a>
                         </li>
                         <li>
-                             <img src="../images/13.jpg" alt="">
+                           <a href="../SQL/client/list.html">  <img src="../images/13.jpg" alt="">
                              <p><span class="yew">香港特快直送 零扣关 包税</span>泰国妆蕾  泰国妆蕾蚕丝面膜(金) 10片/盒</p>
-                             <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p>
+                             <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p></a>
                         </li>
                         <li>
-                             <img src="../images/13.jpg" alt="">
+                           <a href="../SQL/client/list.html">  <img src="../images/13.jpg" alt="">
                              <p><span class="yew">香港特快直送 零扣关 包税</span>泰国妆蕾  泰国妆蕾蚕丝面膜(金) 10片/盒</p>
-                             <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p>
+                             <p><span class="span7">￥65</span> <del>￥94</del><span class="span8"> 已售1045</span></p></a>
                         </li>
                     </ul>
                     <ul class="list5">
