--- a/code/html/log.html
+++ b/code/html/log.html
@@ -13,6 +13,15 @@
             box-sizing: border-box;
         }
 
+        a {
+            text-decoration: none;
+        }
+
+        ul,
+        li {
+            list-style: none;
+        }
+
         .div1 {
             width: 100%;
             height: 32px;
@@ -77,30 +86,117 @@
         .dl1:hover div {
             display: block;
         }
-        .div2{
+
+        .div2 {
             width: 100%;
         }
-        .div2-1{
+
+        .div2-1 {
             width: 1090px;
             height: 95px;
             margin: 0 auto;
             line-height: 125px;
         }
-        .div2-2{
+
+        .div2-2 {
             width: 1090px;
             height: 553px;
             margin: 0 auto;
             margin-top: 30px;
         }
-        .div2-2 img{
-           margin-top: 100px;
+
+        .div2-2 .pic {
+            margin-top: 60px;
         }
-        .div2-2-1{
+
+        .div2-2-1 {
             width: 420px;
             height: 553px;
-            background: #ccc;
             float: right;
             margin-right: 70px;
+            border: 1px solid #ccc;
+            box-shadow: #5a5d6c;
+        }
+
+        .top {
+            margin: 20px 0 20px 0;
+            color: #5a5d6c;
+            font-weight: normal;
+            font-size: 21px;
+            margin-left: 30px;
+        }
+        .top .span9{
+            font-size: 12px;
+            margin-left: 100px;
+        }
+        .top .span9 a{
+            color: #EA3778;
+        }
+
+        .list8 {
+            text-align: center;
+        }
+
+        .list8 li input {
+            width: 356px;
+            height: 36px;
+            margin-bottom: 25px;
+        }
+        .list8 .li3 {
+            width: 350px;
+            height: 36px;
+            line-height: 36px;
+            margin-left: 30px;
+            margin-bottom: 20px;
+            text-align: left;
+            display: flex;
+        }
+        .list8 .li3 input{
+            display: inline-block; 
+            width: 100px;
+            height:36px;
+            margin: 0;
+            /* float: left; */
+            
+        }
+        .list8 .li3 img{
+            width: 80px;
+            height: 36px;
+            display: inline-block;
+        }
+        .list8 .li3 .span10{
+            display: inline-block;
+            width: 120px;
+            height: 25px;
+            /* position: absolute;
+            top: 0;
+            margin-top: 0; */
+           
+        }
+
+        .list8 .li4 input {
+            width: 15px;
+            height: 15px;
+            margin-right: 15px;
+        }
+
+        .list8 .li4 {
+            font-size: 14px;
+            margin-left: -200px;
+        }
+
+        .list8 .li4 a {
+            color: #EA3778;
+            margin-left: 20px;
+        }
+
+        .list8 .li5 button {
+            width: 356px;
+            height: 36px;
+            margin-bottom: 25px;
+            background: #EA3778;
+            color: #fff;
+            border:1px solid #EA3778;
         }
     </style>
 </head>
@@ -145,22 +241,26 @@
             <img src="../images/26.png" alt="">
         </div>
         <div class="div2-2">
-               <img src="../images/30.PNG" alt="">
-               <div class="div2-2-1">
+            <img src="../images/30.PNG" alt="" class="pic">
+            <div class="div2-2-1">
                 <div class="top">
-                    用户登入<span>还没有莎莎账号？<a href="">立即注册</a></span>
+                    用户登入<span class="span9">还没有莎莎账号？<a href="">立即注册</a></span>
                 </div>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                <ul class="list8">
+                    <li><input type="text" placeholder="邮箱/手机"></li>
+                    <li><input type="text" placeholder="填写密码"></li>
+                    <li class="li3">
+                        <input type="text" placeholder="填写图片验证码">
+                        <img src="../images/27.png" alt="">
+                        <span class="span10">看不清，换一张</span>
+                    </li>
+                    <li class="li4"><input type="checkbox">记住我 <a href="">忘记密码</a></li>
+                    <li class="li5"><button>登入</button></li>
                 </ul>
-               </div>
             </div>
+        </div>
     </div>
-   
+
 </body>
 
 </html>
