--- a/code/html/ssw.html
+++ b/code/html/ssw.html
@@ -19,7 +19,7 @@
     </div>
     <div class="div1">
         <div class="div-1">
-            <span class="span1">欢迎光临莎莎网！ <a href="./log.html"><span class="span1-1">登录</span></a> 或 <a href=""><span class="span1-1">注册</span></a> </span>
+            <span class="span1">欢迎光临莎莎网！ <a href="./log.html"><span class="span1-1">登录</span></a> 或 <a href="./register.html"><span class="span1-1">注册</span></a> </span>
             <div class="right">
                 <dl class="dl1">
                     <dt>我的账户</dt>
