做好了购物车部分功能

--- a/code/SQL/client/list.html
+++ b/code/SQL/client/list.html
@@ -295,9 +295,22 @@
             justify-content: space-between;
         }
 
-
+        .dl1{
+            width: 100%;
+        }
+        .page{
+            margin: auto;
+            margin-left: 500px;
+        }
+        .page a{
+            margin-right: 10px;
+            padding: 15px;
+        }
         .page .active {
-            background: #CCC
+           
+            background: #CCC;
+            padding: 0 10px;
+            margin: auto;
         }
 
         .page a:active {
@@ -553,7 +566,7 @@
             </div>
         </div> -->
     </div>
-    <div id="page" class="page"> </div>
+  <div class="dl1"><div id="page" class="page"></div></div>
     <script src="./jquery-3.4.1.js"></script>
     <script src="./list.js"></script>
 </body>
